# embedded-edge-ai-ncnn

./: .gitignore  CMakeLists.txt  README.md
init/: README.md  system_ai_governor.md  system_ai_governor.rc
src/: image_infer.cpp  led_controller.cpp  led_controller.h  main.cpp  system_ai_governor.cpp  system_ai_governor.md  thermal_ai_service.cpp  thermal_ai_service.md  thermal_ai_service_LED.cpp  thermal_monitor.cpp  thermal_monitor.h
